# Lpg

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build-fuzzer.sh  documentation.lpg  fuzz.sh  ideas.lpg  ideas2.lpg  notepad++.xml
cli/: CMakeLists.txt  main.c
cli_impl/: CMakeLists.txt  lpg_cli.c  lpg_cli.h
ecmascript_backend/: CMakeLists.txt  builtins.js  lpg_ecmascript_backend.c  lpg_ecmascript_backend.h  lpg_ecmascript_value.c  lpg_ecmascript_value.h  lpg_ecmascript_value_set.c  lpg_ecmascript_value_set.h  lpg_enum_encoding.c  lpg_enum_encoding.h  lpg_enum_encoding_strategy.c  lpg_enum_encoding_strategy.h  lpg_function_generation.c  lpg_function_generation.h
fuzz/: CMakeLists.txt  fuzz_target.c  fuzz_target.h  main.c
fuzz/corpus/: algorithm.lpg  array-boolean.lpg  backend_reserved_names.lpg  ecmascript.lpg  enum-generic.lpg  enum-stateful.lpg  enum-stateless.lpg  generic-impl-generic-self.lpg  importsitself.lpg  integer-less.lpg  interface-constant.lpg  interface-generic-impl.lpg  interface-generic.lpg  interface.lpg  lambda-capture-compile-time.lpg  lambda-generic.lpg  lambda-parameters.lpg  lambda-recapture.lpg  lambda-return-type.lpg  loop.lpg  main.lpg  match-enum-stateful.lpg  match-return.lpg  return.lpg  semanticerror.lpg  set.lpg  shift_left_u64.lpg  shift_right_u64.lpg  std.lpg  string-equals.lpg  struct-generic.lpg  struct.lpg  syntaxerror.lpg  unit_value.lpg  web.lpg  xor_u64.lpg
generic/: CMakeLists.txt  lpg_allocate.c  lpg_allocate.h  lpg_arithmetic.c  lpg_arithmetic.h  lpg_array_size.h  lpg_ascii.c  lpg_ascii.h  lpg_assert.c  lpg_assert.h  lpg_atomic.c  lpg_atomic.h  lpg_blob.c  lpg_blob.h  lpg_console.c  lpg_console.h  lpg_copy_file.c  lpg_copy_file.h  lpg_create_process.c  lpg_create_process.h  lpg_for.h  lpg_integer.c  lpg_integer.h  lpg_integer_range.c  lpg_integer_set.c  lpg_integer_set.h  lpg_list_directory.c  lpg_list_directory.h  lpg_monotonic_clock.c  lpg_monotonic_clock.h  lpg_non_null.h  lpg_optional.h  lpg_path.c  lpg_path.h  lpg_read_file.c  lpg_read_file.h  lpg_rename_file.c  lpg_rename_file.h  lpg_stream_writer.c  lpg_stream_writer.h  (+13 more)
javascript_backend/: CMakeLists.txt  lpg_javascript_backend.c  lpg_javascript_backend.h
optimization/: CMakeLists.txt  lpg_optimize.c  lpg_optimize.h  lpg_remove_dead_code.c  lpg_remove_dead_code.h  lpg_remove_unused_functions.c  lpg_remove_unused_functions.h
semantics/: CMakeLists.txt  function_checking_state.h  lpg_captures.c  lpg_captures.h  lpg_check.c  lpg_check.h  lpg_checked_function.c  lpg_checked_function.h  lpg_checked_program.c  lpg_checked_program.h  lpg_enum_element_id.h  lpg_enum_id.h  lpg_function_checking_state.c  lpg_function_checking_state.h  lpg_function_id.h  lpg_garbage_collector.c  lpg_garbage_collector.h  lpg_generic_enum.c  lpg_generic_enum.h  lpg_generic_enum_id.h  lpg_generic_impl.c  lpg_generic_impl.h  lpg_generic_interface.c  lpg_generic_interface.h  lpg_generic_interface_id.h  lpg_generic_interface_instantiation.c  lpg_generic_interface_instantiation.h  lpg_generic_lambda.c  lpg_generic_lambda.h  lpg_generic_lambda_id.h  lpg_generic_lambda_instantiation.c  lpg_generic_lambda_instantiation.h  lpg_generic_struct.c  lpg_generic_struct.h  lpg_generic_struct_id.h  lpg_instruction.c  lpg_instruction.h  lpg_instruction_checkpoint.c  lpg_instruction_checkpoint.h  lpg_instruction_sequence.c  (+36 more)
syntax/: CMakeLists.txt  lpg_expression.c  lpg_expression.h  lpg_expression_parser.c  lpg_expression_parser.h  lpg_expression_pool.c  lpg_expression_pool.h  lpg_find_next_token.c  lpg_find_next_token.h  lpg_parse_expression.c  lpg_parse_expression.h  lpg_save_expression.c  lpg_save_expression.h  lpg_source_location.c  lpg_source_location.h
tests/: CMakeLists.txt  find_builtin_module_directory.h  find_module_directory.h  find_next_token.c  find_next_token.h  find_test_module_directory.h  find_test_web_directory.h  handle_parse_error.c  handle_parse_error.h  integer.c  integer.h  main.c  path.c  path.h  print_instruction.c  print_instruction.h  save_expression.c  standard_library.c  standard_library.h  test.c  test.h  test_allocator.c  test_allocator.h  test_arithmetic.c  test_arithmetic.h  test_blob.c  test_blob.h  test_c_backend.c  test_c_backend.h  test_cli.c  test_cli.h  test_create_process.c  test_create_process.h  test_decode_string_literal.c  test_decode_string_literal.h  test_ecmascript_enum_encoding_strategy.c  test_ecmascript_enum_encoding_strategy.h  test_enum_encoding.c  test_enum_encoding.h  test_expression.c  (+62 more)
tests/c_backend/: 0_empty.c  10_concat.c  11_lambda.c  12_lambda_call.c  13_lambda_parameter.c  14_lambda_parameters.c  15_return_string.c  16_pass_string.c  17_pass_owning_string.c  18_move_string.c  19_integer.c  1_hello_world.c  20_return_lambda.c  21_match.c  22_tuple.c  23_lambda_capture.c  24_lambda_capture_owning.c  25_tuple_ownership.c  26_interface.c  27_integer_less.c  28_integer_to_string.c  2_print_twice.c  3_loop_break.c  4_concat_compile_time.c  5_read.c  6_loop_read.c  7_assert_false.c  8_assert_true.c  9_string_equals.c  CMakeLists.txt
tests/in_lpg/: add.lpg  add_u64.lpg  algorithm.lpg  and_u64.lpg  array-boolean.lpg  array-capture.lpg  array-nesting.lpg  array-string.lpg  enum.lpg  (+60 more)
type_check/: CMakeLists.txt  lpg_captures.c  lpg_captures.h  lpg_check.c  lpg_check.h  lpg_function_checking_state.c  lpg_function_checking_state.h  lpg_generic_enum.c  lpg_generic_enum.h  lpg_generic_enum_instantiation.c  lpg_generic_enum_instantiation.h  lpg_generic_impl.c  lpg_generic_impl.h  lpg_generic_impl_regular_interface.c  lpg_generic_impl_regular_interface.h  lpg_generic_interface.c  lpg_generic_interface.h  lpg_generic_interface_instantiation.h  lpg_generic_lambda.c  lpg_generic_lambda.h  lpg_generic_struct.c  lpg_generic_struct.h  lpg_generic_struct_instantiation.c  lpg_generic_struct_instantiation.h  lpg_instruction_checkpoint.c  lpg_instruction_checkpoint.h  lpg_load_module.c  lpg_load_module.h  lpg_local_variable.c  lpg_local_variable.h  lpg_program_check.c  lpg_program_check.h
web/: CMakeLists.txt  website.c  website.h
(+128 files in other folders)
