include_directories(../syntax)
include_directories(../generic)
include_directories(../tokenization)
include_directories(../semantics)
file(GLOB sources "*.c" "*.h")
add_executable(lpg ${sources})
target_link_libraries(lpg syntax semantics)
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(lpg clang-format)
endif()
