include_directories(../cli_impl)
include_directories(../generic)
include_directories(../syntax)
add_definitions(-DLPG_CLI_MODULE_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/../standard_library")
file(GLOB sources "*.c" "*.h")
add_executable(lpg ${sources})
target_compile_options(lpg PUBLIC ${LPG_COMPILE_FLAGS})
target_link_libraries(lpg cli_impl)
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(lpg clang-format)
endif()
if(LPG_WITH_UB_SANITIZER)
	target_link_libraries(lpg ubsan)
endif()
