include_directories(../syntax)
include_directories(../generic)
include_directories(../tokenization)
include_directories(../semantics)
file(GLOB sources "*.c" "*.h")
add_library(cli_impl ${sources})
target_link_libraries(cli_impl syntax semantics generic)
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(cli_impl clang-format)
endif()
