include_directories(../syntax)
include_directories(../generic)
include_directories(../tokenization)
include_directories(../semantics)
include_directories(../ecmascript_backend)
include_directories(../optimization)
file(GLOB sources "*.c" "*.h")
add_library(cli_impl ${sources})
target_compile_options(cli_impl PUBLIC ${LPG_COMPILE_FLAGS})
target_link_libraries(cli_impl syntax optimization ecmascript_backend)
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(cli_impl clang-format)
endif()
