include_directories(../generic)
include_directories(../semantics)
include_directories(../syntax)
file(GLOB_RECURSE sources "*.c" "*.h")
add_library(ecmascript_backend ${sources})
target_compile_options(ecmascript_backend PUBLIC ${LPG_COMPILE_FLAGS})
target_link_libraries(ecmascript_backend semantics generic)
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(ecmascript_backend clang-format)
endif()
