include_directories(../cli_impl)
include_directories(../syntax)
include_directories(../generic)
file(GLOB sources "*.c" "*.h")

if(LPG_WITH_CLANG_FUZZER)
    add_definitions(-DLPG_WITH_CLANG_FUZZER=1)
    add_executable(fuzz ${sources})
    set_target_properties(fuzz PROPERTIES LINK_FLAGS -fsanitize=fuzzer)
else()
    add_definitions(-DLPG_WITH_CLANG_FUZZER=0)
    add_executable(fuzz ${sources})
endif()
target_link_libraries(fuzz cli_impl)

target_compile_options(fuzz PUBLIC ${LPG_COMPILE_FLAGS})
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(fuzz clang-format)
endif()
if(LPG_WITH_UB_SANITIZER)
	target_link_libraries(fuzz ubsan)
endif()
