include_directories(../generic)
include_directories(../semantics)
include_directories(../syntax)
file(GLOB_RECURSE sources "*.c" "*.h")
add_library(javascript_backend ${sources})
target_compile_options(javascript_backend PUBLIC ${LPG_COMPILE_FLAGS})
target_link_libraries(javascript_backend semantics generic)
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(javascript_backend clang-format)
endif()
