include_directories(../generic)
include_directories(../syntax)
include_directories(../tokenization)
file(GLOB sources "*.c" "*.h")
add_library(semantics ${sources})
target_compile_options(semantics PUBLIC ${LPG_COMPILE_FLAGS})
target_link_libraries(semantics generic)
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(semantics clang-format)
endif()
