include_directories(../generic)
include_directories(../tokenization)
file(GLOB sources "*.c" "*.h")
add_library(syntax ${sources})
target_compile_options(syntax PUBLIC ${LPG_COMPILE_FLAGS})
target_link_libraries(syntax tokenization generic)
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(syntax clang-format)
endif()
