include_directories(../syntax)
include_directories(../generic)
include_directories(../tokenization)
include_directories(../semantics)
include_directories(../cli_impl)
file(GLOB sources "*.c" "*.h")
add_executable(tests ${sources})
target_link_libraries(tests cli_impl)
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(tests clang-format)
endif()
