find_program(CMAKE_EXECUTABLE cmake)
if(NOT CMAKE_EXECUTABLE)
	message(FATAL_ERROR "Could not find CMake")
endif()
add_definitions(-DLPG_CMAKE_EXECUTABLE="${CMAKE_EXECUTABLE}")

include_directories(../syntax)
include_directories(../generic)
include_directories(../tokenization)
include_directories(../semantics)
include_directories(../type_check)
include_directories(../optimization)
include_directories(../cli_impl)
include_directories(../c_backend)
include_directories(../ecmascript_backend)
include_directories(../web)
file(GLOB sources "*.c" "*.h")
add_executable(tests ${sources})
target_compile_options(tests PUBLIC ${LPG_COMPILE_FLAGS})
target_link_libraries(tests cli_impl c_backend ecmascript_backend optimization duktape)
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(tests clang-format)
endif()
if(LPG_WITH_UB_SANITIZER)
	target_link_libraries(tests ubsan)
endif()
add_test(NAME unit_tests COMMAND $<TARGET_FILE:tests>)
