include_directories(../generic)
include_directories(../syntax)
include_directories(../tokenization)
include_directories(../semantics)
file(GLOB sources "*.c" "*.h")
add_library(type_check ${sources})
target_compile_options(type_check PUBLIC ${LPG_COMPILE_FLAGS})
target_link_libraries(type_check semantics)
if(LPG_WITH_CLANG_FORMAT_AUTO)
	add_dependencies(type_check clang-format)
endif()
