include_directories(../generic)
include_directories(../semantics)
include_directories(../syntax)
include_directories(../ecmascript_backend)
file(GLOB sources "*.c" "*.h")
add_library(web ${sources})
target_compile_options(web PUBLIC ${LPG_COMPILE_FLAGS})
if(LPG_WITH_CLANG_FORMAT_AUTO)
        add_dependencies(web clang-format)
endif()
