if(MSVC)
    add_definitions(/wd4101)
    add_definitions(/wd4702)
else()
    add_definitions(-Wno-unused-variable)
endif()
include_directories(../../c_backend/environment)
file(GLOB sources "*.c")
foreach(source IN ITEMS ${sources})
    get_filename_component(exeName ${source} NAME_WE)
    add_executable(${exeName} ${source})
	add_test(NAME ${exeName} COMMAND $<TARGET_FILE:${exeName}>)
endforeach()
