if(MSVC)
    add_definitions(/wd4101)
    add_definitions(/wd4702)
else()
    add_definitions(-Wno-unused-variable)
    add_definitions(-Wno-unused-function)
endif()
include_directories(../../c_backend/environment)
file(GLOB sources "*.c")
foreach(source IN ITEMS ${sources})
    get_filename_component(exeName ${source} NAME_WE)
    add_executable(${exeName} ${source})
	add_test(NAME ${exeName} COMMAND $<TARGET_FILE:${exeName}>)
	if(LPG_WITH_UB_SANITIZER)
		target_link_libraries(${exeName} ubsan)
	endif()
endforeach()
