if(MSVC)
    add_definitions(/wd4101)
    add_definitions(/wd4702)
else()
    add_definitions(-Wno-unused-variable)
    add_definitions(-Wno-unused-function)
endif()
include_directories(../../c_backend/environment)
file(GLOB sources "*.c")
foreach(source IN ITEMS ${sources})
    get_filename_component(exeName ${source} NAME_WE)
    add_executable(${exeName} ${source})
    if(UNIX AND NOT APPLE AND NOT LPG_WITH_UB_SANITIZER AND NOT LPG_WITH_MEMORY_SANITIZER AND NOT LPG_WITH_ADDRESS_SANITIZER)
        set(LPG_VALGRIND_LEAK_CHECK valgrind --error-exitcode=42 --leak-check=full)
    endif()
    add_test(NAME ${exeName} COMMAND ${LPG_VALGRIND_LEAK_CHECK} $<TARGET_FILE:${exeName}>)
	if(LPG_WITH_UB_SANITIZER)
		target_link_libraries(${exeName} ubsan)
	endif()
endforeach()
